@@ -363,8 +363,10 @@ my @disablables = (
     "fips",
     "fuzz-libfuzzer",
     "fuzz-afl",
+    "gmac",
     "gost",
     "idea",
+    "kmac",
     "legacy",
     "makedepend",
     "md2",
