@@ -483,11 +483,17 @@ static void list_disabled(void)
 #ifdef OPENSSL_NO_ENGINE
     BIO_puts(bio_out, "ENGINE\n");
 #endif
+#ifdef OPENSSL_NO_GMAC
+    BIO_puts(bio_out, "GMAC\n");
+#endif
 #ifdef OPENSSL_NO_GOST
     BIO_puts(bio_out, "GOST\n");
 #endif
 #ifdef OPENSSL_NO_IDEA
     BIO_puts(bio_out, "IDEA\n");
+#endif
+#ifdef OPENSSL_NO_KMAC
+    BIO_puts(bio_out, "KMAC\n");
 #endif
 #ifdef OPENSSL_NO_MD2
     BIO_puts(bio_out, "MD2\n");
